<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="@string/pref_openmode"
        android:summary="Открывать файл при запуске приложения"
        android:title="Открыть" />
    <EditTextPreference
        android:defaultValue="14"
        android:key="@string/pref_size"
        android:summary="Устанавливает новый размер шрифта"
        android:title="Размер шрифта"
        android:dialogTitle="Введите размер шрифта от 10 до 32" />
    <ListPreference
        android:key="@string/pref_style"
        android:title="Стиль для шрифта"
        android:summary="Устанавливает стиль шрифта"
        android:defaultValue="1"
        android:entries="@array/text_style"
        android:entryValues="@array/text_style"
        android:dialogTitle="Выберите стиль шрифта" />
    <ListPreference
        android:key="@string/pref_background"
        android:title="Тема"
        android:summary="Устанавливает тему"
        android:entries="@array/theme"
        android:entryValues="@array/theme"
        android:dialogTitle="Выберите тему" />
    <EditTextPreference
        android:defaultValue="sample"
        android:key="@string/choose_file"
        android:summary=""
        android:title="Выбор файла"
        android:dialogTitle="Введите имя файла без указания формата" />

</PreferenceScreen>